RESOLVED FIXED201066
Have RenderLayer::calculateClipRects() use offsetFromAncestor() when possible
https://bugs.webkit.org/show_bug.cgi?id=201066
Summary Have RenderLayer::calculateClipRects() use offsetFromAncestor() when possible
Simon Fraser (smfr)
Reported 2019-08-22 21:57:41 PDT
Have RenderLayer::calculateClipRects() use offsetFromAncesetor() when possible
Attachments
Patch (4.64 KB, patch)
2019-08-22 22:01 PDT, Simon Fraser (smfr)
no flags
Patch (4.64 KB, patch)
2019-08-22 22:06 PDT, Simon Fraser (smfr)
no flags
Patch (4.62 KB, patch)
2019-08-24 10:56 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2019-08-22 22:01:34 PDT
Simon Fraser (smfr)
Comment 2 2019-08-22 22:06:29 PDT
Simon Fraser (smfr)
Comment 3 2019-08-23 09:39:05 PDT
media/video-zoom-controls.html is failing because we lose the m_hasTransformedAncestor flag on the layer.
Simon Fraser (smfr)
Comment 4 2019-08-24 10:56:40 PDT
WebKit Commit Bot
Comment 5 2019-08-24 14:42:48 PDT
Comment on attachment 377211 [details] Patch Rejecting attachment 377211 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 377211, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=377211&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=201066&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 377211 from bug 201066. Fetching: https://bugs.webkit.org/attachment.cgi?id=377211 Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: fd288e23de846ae3b864a7eb542c4380a48a671a and refs/remotes/origin/master differ, using rebase: :040000 040000 a3c280b369cfbe5de3c81df51c85bf2abcaa3c03 119c193d119419ede55de96087df118127899c57 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Committing to http://svn.webkit.org/repository/webkit/trunk ... M Source/WebCore/ChangeLog ERROR from SVN: Item is out of date: File '/trunk/Source/WebCore/ChangeLog' is out of date W: fd288e23de846ae3b864a7eb542c4380a48a671a and refs/remotes/origin/master differ, using rebase: :040000 040000 a3c280b369cfbe5de3c81df51c85bf2abcaa3c03 119c193d119419ede55de96087df118127899c57 M Source Current branch master is up to date. ERROR: Not all changes have been committed into SVN, however the committed ones (if any) seem to be successfully integrated into the working tree. Please see the above messages for details. Failed to run "['git', 'svn', 'dcommit', '--rmdir']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: https://webkit-queues.webkit.org/results/12965472
WebKit Commit Bot
Comment 6 2019-08-24 19:14:36 PDT
Comment on attachment 377211 [details] Patch Clearing flags on attachment: 377211 Committed r249091: <https://trac.webkit.org/changeset/249091>
WebKit Commit Bot
Comment 7 2019-08-24 19:14:38 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8 2019-08-24 19:15:18 PDT
Note You need to log in before you can comment on or make changes to this bug.